--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@
   --main-background-color: #ffffff;
 }
 
+.container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 1px solid red;
+}
+
 body {
   color: var(--main-text-color);
   font-family: "Roboto", sans-serif;
@@ -20,7 +29,7 @@ body {
     font-weight: 500;
     line-height: (calc(16 / 14));
     margin-top: 32px;
-    margin-bottom: 32px;
+    /* margin-bottom: 32px; */
 }
 
 .header-first-link, .header-second-link {
@@ -33,7 +42,7 @@ body {
     font-size: 44px;
     font-weight: 900;
     line-height: (calc(60 / 44));
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .hero-button {
@@ -41,14 +50,14 @@ body {
     font-size: 16px;
     font-weight: 700;
     line-height: calc(30 / 16);
-    margin-bottom: 200px;
+    /* margin-bottom: 200px; */
 }
 
 .information-name {
     color: var(--main-text-color);
     font-weight: 700;
     line-height: calc(16 / 14);
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 .work-name, .team-name {
@@ -56,7 +65,7 @@ body {
     font-size: 36px;
     font-weight: 700;
     line-height: calc(42 / 36);
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 
 .team-caption  {
@@ -96,8 +105,8 @@ line-height: calc(26 / 16)
   color: var(--third-text-color);
   font-weight: 500;
   line-height: (calc(16 / 14));
-  margin-top: 32px;
-  margin-bottom: 32px;
+  /* margin-top: 32px;
+  margin-bottom: 32px; */
 }
 
 .header-contact-mail {
@@ -125,21 +134,12 @@ span {
 
 .information-main {
     color: var(--third-text-color);
-    margin-bottom: 118px;
-}
-
-.container {
-  width: 1200px;
-  height: 2346px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+    /* margin-bottom: 118px; */
 }
 
 .header-logo {
-  margin-top: 24px;
-  margin-bottom: 25px;
+  /* margin-top: 24px;
+  margin-bottom: 25px; */
 }
 
 .header {
@@ -151,11 +151,11 @@ span {
 }
 
 .work-img {
-  margin-bottom: 94px;
+  /* margin-bottom: 94px; */
 }
 
 .team-item {
-  margin-bottom: 94px;
+  /* margin-bottom: 94px; */
 }
 
 .team {
@@ -163,13 +163,18 @@ span {
 }
 
 .footer-logo {
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .footer-item {
-  margin-bottom: 9px;
+  /* margin-bottom: 9px; */
 }
 
 .footer-item:last-child {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
+
+.work {
+  margin-bottom: 94px;
+}
+
